--- a/MorningDriveApp/ios/MorningDriveApp.xcodeproj/xcshareddata/xcschemes/MorningDriveApp.xcscheme
+++ b/MorningDriveApp/ios/MorningDriveApp.xcodeproj/xcshareddata/xcschemes/MorningDriveApp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MorningDriveApp.app"
+               BuildableName = "Morning Drive.app"
                BlueprintName = "MorningDriveApp"
                ReferencedContainer = "container:MorningDriveApp.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MorningDriveApp.app"
+            BuildableName = "Morning Drive.app"
             BlueprintName = "MorningDriveApp"
             ReferencedContainer = "container:MorningDriveApp.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MorningDriveApp.app"
+            BuildableName = "Morning Drive.app"
             BlueprintName = "MorningDriveApp"
             ReferencedContainer = "container:MorningDriveApp.xcodeproj">
          </BuildableReference>
