--- a/MorningDriveApp/package.json
+++ b/MorningDriveApp/package.json
@@ -18,8 +18,10 @@
     "icons:generate": "python3 scripts/generate_icon.py --all"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^5.1.1",
+    "react-native-keychain": "^9.2.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
