--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,39 @@
 # Environment variables
 .env
-.env.local
-.env.production
+.env.*
+!.env.example
+!.env.*.example
 
-# Dependencies
-node_modules/
+# Python
 __pycache__/
-
-# Build outputs
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# Javascript
+node_modules/
 
 # Data
 *.db
 *.sqlite
-data/
+# Like, backup
+*.db.*  
 
 # IDE
 .idea/
@@ -30,8 +48,54 @@ MorningDriveApp/build/
 *.xcworkspace
 !MorningDriveApp/ios/*.xcworkspace/
 
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+**/.xcode.env.local
+
+# Android/IntelliJ
+#
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
+.kotlin/
+
 # React Native
 *.jsbundle
 
-# Music cache
-backend/assets/music_cache/
+# Ruby / CocoaPods
+**/Pods/
+/vendor/bundle/
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# Misc
+*.swp
+*.swo
